fixed padding for elements one and three and add left margin to align element three

--- a/foundations/block-and-inline/01-margin-and-padding-1/style.css
+++ b/foundations/block-and-inline/01-margin-and-padding-1/style.css
@@ -24,9 +24,9 @@ body {
   width: 200px;
   /* CHANGE ME */
   padding: 0px;
-  margin-left: 0px;
+  margin-left: 330px;
 }
 
-.one .three {
+.one, .three {
   padding: 32px;
 }
